Fixed visible scrollbar in minicart popup

--- a/web/css/layout/_minicart.less
+++ b/web/css/layout/_minicart.less
@@ -246,6 +246,9 @@
         .product-image-container {
             display: block;
             border: 1px solid @divider__color;
+            .product-image-wrapper {
+                padding: 0 !important;
+            }
         }
         .product-item-photo,
         .product-image-container {
